--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,10 @@ div#wrapper>div#result>#kq {
     font-size: 50px;
 }
 
-.zoom {
+/* .zoom {
     background-color: greenyellow !important;
 }
-
+ */
 div#wrapper>div#keyboard {
     height: 400px;
     background-color: #f8bbd0;
